--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -132,7 +133,7 @@
                     <div>
                         <h3 class="text-xl font-semibold text-gray-700 mb-3">Current Names</h3>
                         <ul id="player-list" class="space-y-2 max-h-60 overflow-y-auto bg-gray-50 p-4 rounded-md">
-                            </ul>
+                        </ul>
                     </div>
                 </div>
 
@@ -207,10 +208,12 @@
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc, onSnapshot, collection, addDoc, deleteDoc, writeBatch, query, getDocs, where } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
+        // REGISTER THE CHART PLUGIN
+        Chart.register(ChartDataLabels);
+
         // --- GLOBAL CONFIG & STATE ---
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-voting-app';
         
-        // THIS IS THE CORRECTED PART: Your personal Firebase config is now here.
         const firebaseConfig = {
             apiKey: "AIzaSyCqw3kjeVug3tnGaIwxlHtSF7q4jCs3x_8",
             authDomain: "game-61862.firebaseapp.com",
@@ -543,12 +546,36 @@
                         borderRadius: 5,
                     }]
                 },
+                // UPDATED CHART OPTIONS
                 options: {
                     indexAxis: 'y',
                     responsive: true,
                     maintainAspectRatio: false,
-                    scales: { x: { beginAtZero: true, ticks: { stepSize: 1 } } },
-                    plugins: { legend: { display: false }, title: { display: true, text: 'Vote Results' } }
+                    scales: {
+                        x: { 
+                            beginAtZero: true, 
+                            ticks: { stepSize: 1 } 
+                        }
+                    },
+                    plugins: {
+                        legend: { display: false },
+                        title: { 
+                            display: true, 
+                            text: 'Vote Results' 
+                        },
+                        datalabels: {
+                            anchor: 'end',
+                            align: 'end',
+                            color: '#111827',
+                            font: {
+                                weight: 'bold',
+                                size: 14,
+                            },
+                            formatter: function(value) {
+                                return value + ' vote(s)';
+                            }
+                        }
+                    }
                 }
             });
 
@@ -580,10 +607,11 @@
                     return;
                 }
 
+                // THIS ENTIRE IF/ELSE BLOCK IS UPDATED
                 if (getCookie('isAdmin')) {
                     if (gameState.status === 'results') {
                         showView(resultsView);
-                        renderResults(gameState.currentQuestion);
+                        renderResults(gameState.currentQuestion); // THIS LINE WAS ADDED
                     } else {
                         showView(adminView);
                     }
